--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
     </div>
 
     <div class="classx2">Join our Discord
-        Follow our Twitter
+      <div>Follow our Twitter</div>  
     </div>
     <div class="x3">
         Road Map
 
-        <p>Stage 1: 
+      <p>Stage 1: 
 
             Drop Our main objective pre drop is to establish a large and strong community through our awesome pixel art and attracting people with love for football and sports. We also have over 100 different attributes for your player to make every players drip unique from one another. 
             
@@ -52,13 +52,13 @@
             Stage 5: 
             
             Drop a second collection of coaches Coaches will be able to be added to your roster and make your team much better and add chemistry. Coaches will also their own token known as Playbooks. With playbooks you will be able to expand your coaching staff by purchasing Offensive and Defensive coordinators, equipment managers, and position coordinators. </p>
-    </div>
+         </div>
 
     <div class="px">
         <span class="pxh">Pixel Art</span>
-        <span class="pxd">
+        <div class="pxd">
             Our NFTs are 64x64 pixel art masterpieces.
-        </span>
+        </div>
         <div class="pxi">
             {images}
         </div>
@@ -66,6 +66,8 @@
 
     <div class="mi">
 <span class="mih">Mint Info</span>
+<div>
+<p>
 
         Very Limited Pre-sale:
 
@@ -82,7 +84,7 @@ For our third presale we there will be 100 NFTs available to mint. This one will
 Mint:
 
 For our mint there will me the remaining 2860 NFTs available to mint. This date has also not been announced so go follow our twitter and join our discord for updates.
-    </div>
+</p> </div> </div>
 
     <div class="li">
         <span class="lih">Collection Preview</span>
