--- a/index.html
+++ b/index.html
@@ -99,6 +99,8 @@ For our mint there will me the remaining 2860 NFTs available to mint. This date 
             <img src="780.png" alt="football">
             <img src="779.png" alt="football">
             <img src="777.png" alt="football">
+            <img src="944.png" alt="football">
+            <img src="995.png" alt="football">
         </div>
     </div>
     </div>
